@@ -69,10 +69,13 @@
         <!-- Since we require users to import a specific Hibernate Search module explicitly,
          all integration tests need to know which version that shall be.
          So the property needs to be defined in the global parent pom -->
-        <hibernate-search.module.slot>main</hibernate-search.module.slot>
+        <hibernate-search.module.slot>${hibernateSearchVersion}-orm51</hibernate-search.module.slot>
+        <!-- Following might not match the slot, for example when 'main' is being used. Needed in docs URL rendering. -->
+        <hibernate-search-major-minor-version>5.5</hibernate-search-major-minor-version>
 
         <!-- Target version of WildFly (for testing and JipiJapa integration) -->
-        <version.wildfly>10.1.0.CR1</version.wildfly>
+        <version.wildfly>10.1.0.Final</version.wildfly>
+        <hibernate-orm.module.slot>5.1</hibernate-orm.module.slot>
     </properties>
 
     <!-- Only for management of test-scoped dependencies; All other dependencies (which are exposed to users) are
@@ -778,7 +781,7 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <additionalRuntimeArgLine>-addmods java.xml.bind</additionalRuntimeArgLine>
+                <additionalRuntimeArgLine>--add-modules java.xml.bind</additionalRuntimeArgLine>
             </properties>
         </profile>
         <profile>
